--- a/index.html
+++ b/index.html
@@ -1419,8 +1419,8 @@
                     <p class="closing-message fade-in-up delay-2" style="margin-top: 40px;">Let's transform KYC together</p>
                     <div class="closing-team fade-in-up delay-3">
                         <span class="name-shruti">Shruti</span> || <span class="name-rohit">Rohit</span> || <span class="name-smit">Smit</span>
-                        <br>
-                        <span class="organization-name">PayU</span> || <span class="team-category">Efficiency</span>
+                        <!-- <br>
+                        <span class="organization-name">PayU</span> || <span class="team-category">Efficiency</span> -->
                     </div>
                 </div>
             </div>
